[package]
name = "ncm-convert"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ncm_convert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = {version = "1.40.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
anyhow = "1.0.89"
clap = { version = "4.5.21", features = ["derive"] }
aes = "0.7.5"
block-modes = {version = "0.8.1"}
base64 = "0.22.1"
audiotags = "0.5.0"
tauri-plugin-dialog = "2"
